--- a/css/adventure.css
+++ b/css/adventure.css
@@ -4,12 +4,18 @@ body {
   color: #efcafa;
 }
 
-.explanation-container {
+.description-container {
   width: 800px;
+  height: 400px;
   margin: 0 auto;
   padding-top: 40px;
   font-size: 30px;
   overflow: hidden;
+}
+
+.explanation-container {
+  margin-top: 50px;
+  font-size: 20px;
 }
 
 .player-input {
